--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,22 @@
+html,
+body,
+#root {
+  margin: 0 !important;
+  padding: 0 !important;
+  border: none !important;
+  height: 100%;
+  width: 100%;
+  background: transparent !important;
+  overflow-x: hidden;
+}
+
+.ant-layout {
+  margin: 0 !important;
+  padding: 0 !important;
+  background: transparent !important;
+}
+
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
